# meal-prep-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  api.py  config.py  context.py  metrics.py  schemas.py  state.py
app/adapters/: gemini_adapter.py
app/domain/: __init__.py  models.py  ports.py
app/static/: index.html  metrics.html
app/static/css/: main.css  metrics.css
app/static/js/: app.js  metrics.js
app/use_cases/: meal_plan_use_case.py
app/workflows/: meal_plan_workflow.py
tests/: test_domain.py
