[project]
name = "meal-prep-agent"
version = "0.1.0"
description = "A FastAPI meal planning service using LangGraph and Gemini with clean architecture."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "langgraph==1.2.4",
    "google-genai==2.8.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
